use scripts in jsFuncs repo instead

--- a/listTools/index.html
+++ b/listTools/index.html
@@ -34,6 +34,7 @@
     </div>
 
   </body>
-  <script type="application/javascript" src="_/helpers.js"></script>
+  <script type="application/javascript" src="https://cdn.rawgit.com/jtanadi/jsFuncs/master/listFunctions/compare2Lists.js"></script>
+  <script type="application/javascript" src="https://cdn.rawgit.com/jtanadi/jsFuncs/master/listFunctions/removeDupes.js"></script>
   <script type="application/javascript" src="_/script.js"></script>
 </html>
