--- a/contentSeparator/index.html
+++ b/contentSeparator/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="wrapper">
       <form>
-        <div class="textAreaGroup">
+        <div class="stextAreaGroup">
+
           <label for="rawContent">Raw content</label>
           <textarea id="rawContent"></textarea>
         </div>
