--- a/contentSeparator/index.html
+++ b/contentSeparator/index.html
@@ -9,8 +9,7 @@
   <body>
     <div class="wrapper">
       <form>
-        <div class="stextAreaGroup">
-
+        <div class="textAreaGroup">
           <label for="rawContent">Raw content</label>
           <textarea id="rawContent"></textarea>
         </div>
