add regex filter text input; use filterRegEx()

--- a/contentSeparator/index.html
+++ b/contentSeparator/index.html
@@ -17,14 +17,18 @@
         <input type="button" value="&rarr;">
         
         <div class="textAreaGroup">
-          <label for="codes">Codes</label>
-          <textarea id="codes"></textarea>
+          <label for="regexInput">RegEx</label>
+          <input type="text" id="regexInput"/>
+          <label for="output">Output</label>
+          <textarea id="output"></textarea>
         </div>
 
       </form>
     </div>
 
-    <script type="application/javascript" src="_/helper.js"></script>
+    <script type="application/javascript" src="https://cdn.rawgit.com/jtanadi/jsFuncs/ddf742fa/arrFuncs/storiesToArray.js"></script>
+    <script type="application/javascript" src="https://cdn.rawgit.com/jtanadi/jsFuncs/ddf742fa/arrFuncs/getItemIndex.js"></script>
+    <script type="application/javascript" src="https://cdn.rawgit.com/jtanadi/jsFuncs/ddf742fa/arrFuncs/filterRegEx.js"></script>
     <script type="application/javascript" src="_/ui.js"></script>
   </body>
 </html>
