--- a/testServer/website/index.html
+++ b/testServer/website/index.html
@@ -1,2 +1,25 @@
-Heloooo
-blah
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Test website</title>
+	</head>
+	<body>
+
+		<label for="name">Name</label>
+		<input type="text" id="name"/>
+		
+		<label for="name">Score</label>
+		<input type="text" id="score"/>
+
+		<input type="submit" id="submit"/>
+
+		<p id="wordList"></p>
+
+
+		<script type="application/javascript" src="_/script.js"></script>
+	</body>
+
+
+
+
+</html>
