add remove function

--- a/testServer/website/index.html
+++ b/testServer/website/index.html
@@ -11,7 +11,8 @@
 		<label for="name">Score</label>
 		<input type="text" id="score"/>
 
-		<input type="submit" id="submit"/>
+		<input type="submit" id="submit" value="Add word"/>
+		<input type="button" id="remove" value="Remove word"/>
 
 		<p id="wordList"></p>
 
