--- a/scrollButtons/index.html
+++ b/scrollButtons/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<div class="bg" style="background: red">
+		<div class="bg" style="background: pink">
 			<div class="container">
 				<span class="arrow empty"></span>
 				<span class="arrow down">NEXT</span>
