--- a/z-sketchesUI/scrollButtons/index.html
+++ b/z-sketchesUI/scrollButtons/index.html
@@ -44,7 +44,7 @@
             </div>
     
             <div class="main_text_container">
-              <h1>What's</h1>
+              <h1>What&rsquo;s</h1>
             </div>
     
             <div class="arrow_container">
