--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -31,7 +31,19 @@
 
   <div id="main_container">
     <div id="status_container">
-      status
+      <h1>HH_IP_a</h1>
+      <p class="ruled">Human History, Natural History</p>
+      <p class="ruled">Identification Panel</p>
+      <p class="ruled">Horizontal</p>
+      <p>Title ENG: 5</p>
+      <p>Title FRE: 7</p>
+      <p>Body ENG: 50</p>
+      <p>Body FRE: 60</p>
+      <p>Object name ENG: 5</p>
+      <p>Object name FRE: 7</p>
+      <p>Object desc ENG: 20</p>
+      <p>Object desc FRE: 23</p>
+      <p class="ruled"></span>
     </div>
 
     <div id="cells_container">
@@ -52,10 +64,50 @@
         <img src="./_testImages/HH_SP_R1.jpg" alt="HH_SP_R1" class="panel">
       </div>
 
+      <div class="panel_cell">
+        <img src="./_testImages/HH_SP_H3_a.jpg" alt="HH_SP_R1" class="panel">
+      </div>
+
+      
+      <div class="panel_cell">
+        <img src="./_testImages/HH_ROL_GLWD.jpg" alt="HH_ROL_GLWD" class="panel">
+      </div>
+
+      <div class="panel_cell">
+        <img src="./_testImages/HH_SP_H3_a.jpg" alt="HH_SP_R1" class="panel">
+      </div>
+
+      <div class="panel_cell">
+        <img src="./_testImages/HH_IP_a.jpg" alt="HH_IP_a" class="panel">
+      </div>
+
+      <div class="panel_cell">
+        <img src="./_testImages/HH_SP_R1.jpg" alt="HH_SP_R1" class="panel">
+      </div>
+
+      <div class="panel_cell">
+        <img src="./_testImages/HH_SP_H1.jpg" alt="HH_SP_H1" class="panel">
+      </div>
+
+
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+      <div class="panel_cell"></div>
+
     </div>
   </div>
 
 
-  
+  <script src="./_/script.js" type="application/javascript"></script>
 </body>
 </html>
