restructure & restyle status bar (some divs are renamed); add delayed scroll listener to move status text so it's always in view

--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -30,20 +30,27 @@
   </div>
 
   <div id="main_container">
-    <div id="status_container">
-      <h1>HH_IP_a</h1>
-      <p class="ruled">Human History, Natural History</p>
-      <p class="ruled">Identification Panel</p>
-      <p class="ruled">Horizontal</p>
-      <p>Title ENG: 5</p>
-      <p>Title FRE: 7</p>
-      <p>Body ENG: 50</p>
-      <p>Body FRE: 60</p>
-      <p>Object name ENG: 5</p>
-      <p>Object name FRE: 7</p>
-      <p>Object desc ENG: 20</p>
-      <p>Object desc FRE: 23</p>
-      <p class="ruled"></span>
+    <div id="side_container">
+      <div id="status_container">
+        <h1>HH_IP_a</h1>
+        <p class="rule"></p>
+        <p>Human History</p>
+        <P>Natural History</p>
+        <p class="rule"></p>
+        <p>Identification Panel</p>
+        <p class="rule"></p>
+        <p>Horizontal</p>
+        <p class="rule"></p>
+        <p>Title ENG: 5</p>
+        <p>Title FRE: 7</p>
+        <p>Body ENG: 50</p>
+        <p>Body FRE: 60</p>
+        <p>Object name ENG: 5</p>
+        <p>Object name FRE: 7</p>
+        <p>Object desc ENG: 20</p>
+        <p>Object desc FRE: 23</p>
+        <p class="rule"></p>
+      </div>
     </div>
 
     <div id="cells_container">
