add a sidebar footnote

--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -29,8 +29,8 @@
     </div>
   </div>
 
-  <div id="main_container">
-    <div id="side_container">
+  <div id="body_container">
+    <div id="sidebar">
       <div id="status_container">
         <h1>HH_IP_a</h1>
         <p class="rule"></p>
@@ -51,9 +51,13 @@
         <p>Object desc FRE: 23</p>
         <p class="rule"></p>
       </div>
+
+      <div id="sidebar_footnote">
+        <span>Everyone ❤️ panels</span>
+      </div>
     </div>
 
-    <div id="cells_container">
+    <div id="main_area">
       <div class="panel_row">
         <div class="panel_cell">
           <img src="./_testImages/HH_IP_a.jpg" alt="HH_IP_a" class="panel">
