--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -37,6 +37,14 @@
         <option value="vertical">Vertical</option>
       </select>
     </div>
+    
+    <div class="nav_col">
+      <select id="selector3">
+        <option value="">ALL</option>
+        <option value="true">True</option>
+        <option value="false">False</option>
+      </select>
+    </div>
   </div>
 
   <div id="body_container">
@@ -70,15 +78,15 @@
     <div id="main_area">
       <div class="panel_row">
         <div class="panel_cell">
-          <img src="./_testImages/HH_IP_a.jpg" alt="HH_IP_a" data-selector0="human_history, natural_history" data-selector1="identification_panel" data-selector2="horizontal" class="panel">
+          <img src="./_testImages/HH_IP_a.jpg" alt="HH_IP_a" data-selector0="human_history, natural_history" data-selector1="identification_panel" data-selector2="horizontal" data-selector3="true" class="panel">
         </div>
         
         <div class="panel_cell">
-          <img src="./_testImages/HH_ROL_GLWD.jpg" data-selector0="human_history" data-selector1="object_label" data-selector2="" alt="HH_ROL_GLWD" class="panel">
+          <img src="./_testImages/HH_ROL_GLWD.jpg" data-selector0="human_history" data-selector1="object_label" data-selector2="" data-selector3="false" alt="HH_ROL_GLWD" class="panel">
         </div>
   
         <div class="panel_cell">
-          <img src="./_testImages/HH_SP_H1.jpg" data-selector0="natural_history" data-selector1="story_panel" data-selector2="vertical" alt="HH_SP_H1" class="panel">
+          <img src="./_testImages/HH_SP_H1.jpg" data-selector0="natural_history" data-selector1="story_panel" data-selector2="vertical" data-selector3="true" alt="HH_SP_H1" class="panel">
         </div>
   
         <!-- <div class="panel_cell">
