--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -49,7 +49,8 @@
 
   <div id="body_container">
     <div id="sidebar">
-      <div id="status_container">
+      <!-- .panel_info hidden by default -->
+      <div class="panel_info" id="HH_IP_a">
         <h1>HH_IP_a</h1>
         <p class="rule"></p>
         <p>Human History</p>
@@ -78,15 +79,15 @@
     <div id="main_area">
       <div class="panel_row">
         <div class="panel_cell">
-          <img src="./_testImages/HH_IP_a.jpg" alt="HH_IP_a" data-selector0="human_history, natural_history" data-selector1="identification_panel" data-selector2="horizontal" data-selector3="true" class="panel">
+          <img src="./_testImages/HH_IP_a.jpg" class="panel" alt="HH_IP_a" data-selector0="human_history, natural_history" data-selector1="identification_panel" data-selector2="horizontal" data-selector3="true">
         </div>
         
         <div class="panel_cell">
-          <img src="./_testImages/HH_ROL_GLWD.jpg" data-selector0="human_history" data-selector1="object_label" data-selector2="" data-selector3="false" alt="HH_ROL_GLWD" class="panel">
+          <img src="./_testImages/HH_ROL_GLWD.jpg" class="panel" alt="HH_ROL_GLWD" data-selector0="human_history" data-selector1="object_label" data-selector2="" data-selector3="false">
         </div>
   
         <div class="panel_cell">
-          <img src="./_testImages/HH_SP_H1.jpg" data-selector0="natural_history" data-selector1="story_panel" data-selector2="vertical" data-selector3="true" alt="HH_SP_H1" class="panel">
+          <img src="./_testImages/HH_SP_H1.jpg" class="panel" alt="HH_SP_H1" data-selector0="natural_history" data-selector1="story_panel" data-selector2="vertical" data-selector3="true">
         </div>
   
         <!-- <div class="panel_cell">
