info update works

--- a/panelViewer/dev/index.html
+++ b/panelViewer/dev/index.html
@@ -71,6 +71,18 @@
         <p class="rule"></p>
       </div>
 
+      <div class="panel_info" id="HH_ROL_GLWD">
+          <h1>HH_ROL_GLWD</h1>
+          <p class="rule"></p>
+          <p>Human History</p>
+          <p class="rule"></p>
+          <p>Object Label</p>
+          <p class="rule"></p>
+          <p>Horizontal</p>
+          <p class="rule"></p>
+          <p>Description for HH_ROL_GLWD</p>
+      </div>
+
       <div id="sidebar_footnote">
         <span>Everyone ❤️ panels</span>
       </div>
