use line dividers

--- a/panelViewer/dev/web_prototype/index.html
+++ b/panelViewer/dev/web_prototype/index.html
@@ -36,13 +36,13 @@
       </select>
     </div>
     
-    <div class="nav_item">
+    <!-- <div class="nav_item">
       <select id="selector3">
         <option value="">ALL</option>
         <option value="true">True</option>
         <option value="false">False</option>
       </select>
-    </div>
+    </div> -->
   </div>
 
   <div id="body_container">
