add spacers with JS - new function

--- a/panelViewer/dev/web_prototype/index.html
+++ b/panelViewer/dev/web_prototype/index.html
@@ -83,7 +83,7 @@
 
       <div id="sidebar_footnote">
         <p>&#9737; New or updated panels</p>
-        <p>&#9782; Panel Viewer v. 0.2<br>&#9788; Built May 3, 2018</p>
+        <p>&#9782; Panel Viewer 0.2<br>&#9788; Page built May 3, 2018</p>
       </div>
     </div>
 
