change spacers to circles to clear new panel symbols

--- a/panelViewer/dev/web_prototype/index.html
+++ b/panelViewer/dev/web_prototype/index.html
@@ -102,12 +102,12 @@
           <img src="./_testImages/HH_SP_H1.jpg" class="panel" alt="HH_SP_H1" data-selector0="natural_history" data-selector1="story_panel" data-selector2="vertical" data-selector3="true">
         </div>
   
-        <!-- <div class="panel_cell">
+        <div class="panel_cell">
           <img src="./_testImages/HH_SP_R1.jpg" alt="HH_SP_R1" class="panel">
         </div>
         <div class="panel_cell">
           <img src="./_testImages/HH_SP_R1.jpg" alt="HH_SP_R1" class="panel">
-        </div> -->
+        </div>
       </div>
      
       <div class="panel_row">
