--- a/panelViewer/dev/web_prototype/index.html
+++ b/panelViewer/dev/web_prototype/index.html
@@ -82,15 +82,39 @@
       </div>
 
       <div id="sidebar_footnote">
-        <p>&#9737; New or updated panels</p>
-        <p>&#9782; Panel Viewer 0.2<br>&#9788; Page built May 3, 2018</p>
+        <div class="legend_row">
+          <div class="symbol">
+            <p>&#9737;</p>
+          </div>
+          <div class="legend">
+            <p>Denotes new or updated panels</p>
+          </div>
+        </div>
+
+        <div class="legend_row">
+          <div class="symbol">
+            <p>&#9782;</p>
+          </div>
+          <div class="legend">
+            <p>Panel Viewer 0.2</p>
+          </div>
+        </div>
+
+        <div class="legend_row">
+          <div class="symbol">
+            <p>&#9788;</p>
+          </div>
+          <div class="legend">
+            <p>Page built May 3, 2018</p>
+          </div>
+        </div>
       </div>
     </div>
 
     <div id="main_area">
       <div class="panel_row">
         <div class="panel_cell">
-          <!-- <div class="new_panel">&#9737;</div> -->
+          <div class="new_panel">&#9737;</div>
           <img src="./_testImages/HH_IP_a.jpg" class="panel" alt="HH_IP_a" data-selector0="human_history, natural_history" data-selector1="identification_panel" data-selector2="horizontal" data-selector3="true">
         </div>
         
