use json held in index.html to generate objects

--- a/panelViewer/dev/web_prototype/index.html
+++ b/panelViewer/dev/web_prototype/index.html
@@ -107,7 +107,109 @@
     </div>
   </div> <!--End body_container-->
 
+  <div id="json_data">
+    [
+      {
+        "code": "HH_IP_a",
+        "selectors": {
+          "selector0": "human_history",
+          "selector1": "identification_panel",
+          "selector2": "horizontal"
+        }
+      },
+      {
+        "code": "HH_ROL_GLWD",
+        "selectors": {
+          "selector0": "human_history natural_history",
+          "selector1": "object_label",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_H1",
+        "selectors": {
+          "selector0": "human_history",
+          "selector1": "story_panel",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_H3_a",
+        "selectors": {
+          "selector0": "natural_history",
+          "selector1": "story_panel",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_R1",
+        "selectors": {
+          "selector0": "natural_history",
+          "selector1": "story_panel",
+          "selector2": "horizontal"
+        }
+      },
+      {
+        "code": "HH_IP_a_new",
+        "selectors": {
+          "selector0": "human_history",
+          "selector1": "identification_panel",
+          "selector2": "horizontal"
+        }
+      },
+      {
+        "code": "HH_ROL_GLWD_new",
+        "selectors": {
+          "selector0": "human_history natural_history",
+          "selector1": "object_label",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_H3_a_new",
+        "selectors": {
+          "selector0": "natural_history",
+          "selector1": "story_panel",
+          "selector2": "vertical"
+        }
+      },
 
+      {
+        "code": "HH_SP_H1",
+        "selectors": {
+          "selector0": "human_history",
+          "selector1": "story_panel",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_H3_a",
+        "selectors": {
+          "selector0": "natural_history",
+          "selector1": "story_panel",
+          "selector2": "vertical"
+        }
+      },
+      {
+        "code": "HH_SP_R1",
+        "selectors": {
+          "selector0": "natural_history",
+          "selector1": "story_panel",
+          "selector2": "horizontal"
+        }
+      },
+      {
+        "code": "HH_IP_a_new",
+        "selectors": {
+          "selector0": "human_history",
+          "selector1": "identification_panel",
+          "selector2": "horizontal"
+        }
+      }
+    ]
+  </div>
+
+  <script src="./_/src/panelsObj.js" type="application/javascript"></script>
   <script src="./_/script.js" type="application/javascript"></script>
 </body>
 </html>
