--- a/sortGems/index.html
+++ b/sortGems/index.html
@@ -95,7 +95,7 @@
   const makeArray = (inputText) => {
     return inputText
       .trim()
-      .split("\n\n")
+      .split(/\n\n+/)
       .map(cluster => {                      
         return cluster
           .split("\n")
