fix button label

--- a/sortGems/index.html
+++ b/sortGems/index.html
@@ -62,7 +62,7 @@
         <input type="radio" name="sort_order" id="sort_order_alphabetical" checked>
         <label for="sort_order">Z–a</label>
         <input type="radio" name="sort_order" id="sort_order_reverse">
-        <button id="sort_button">SORT (A-z)</button>
+        <button id="sort_button">SORT</button>
       </div>
       <textarea name="output_text_area" id="output_text_area" cols="30" rows="50"></textarea>
 
